--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -6,4 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".ui.CompassActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/CompassCenter"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/compassImage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/compasssilhouette" />
+
+        <ImageView
+            android:id="@+id/labelNorth"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            app:layout_constraintCircle="@+id/compassImage"
+            app:layout_constraintCircleAngle="0"
+            app:layout_constraintCircleRadius="140dp"
+            app:srcCompat="@drawable/labeldot"
+            tools:layout_editor_absoluteX="174dp"
+            tools:layout_editor_absoluteY="174dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
