--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -5,7 +5,7 @@
     android:id="@+id/compassActivityParentConstraints"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CompassActivity">
+    tools:context=".CompassActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/CompassCenter"
