initial setup for mock UI feature

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,9 +23,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
         android:ems="10"
+        android:hint="Latitude"
         android:inputType="textPersonName"
         android:text="Latitude"
-        android:hint="Latitude"
         app:layout_constraintBottom_toTopOf="@+id/longTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -37,11 +37,24 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="110dp"
         android:ems="10"
+        android:hint="Longitude"
         android:inputType="textPersonName"
         android:text="Longitude"
-        android:hint="Longitude"
         app:layout_constraintBottom_toTopOf="@+id/goToCompass"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/mockOrientationView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="33dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Mock Orientation"
+        app:layout_constraintBottom_toTopOf="@+id/goToCompass"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
 
