finish mock UI initial implementation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,6 @@
         android:ems="10"
         android:hint="Latitude"
         android:inputType="textPersonName"
-        android:text="Latitude"
         app:layout_constraintBottom_toTopOf="@+id/longTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,7 +38,6 @@
         android:ems="10"
         android:hint="Longitude"
         android:inputType="textPersonName"
-        android:text="Longitude"
         app:layout_constraintBottom_toTopOf="@+id/goToCompass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -50,8 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="33dp"
         android:ems="10"
+        android:hint="Mock Orientation"
         android:inputType="textPersonName"
-        android:text="Mock Orientation"
         app:layout_constraintBottom_toTopOf="@+id/goToCompass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
