Reading From Database
Current code reads from database, but does not write to it. Transition to compass is also failing temporarily, due to shift to adapters; attempting to implement it with serializable, but it's not currently working.

--- a/app/src/main/res/layout/label_input_format.xml
+++ b/app/src/main/res/layout/label_input_format.xml
@@ -13,8 +13,9 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
-        android:hint="Parent Label"
+        android:hint="Label Name"
         android:inputType="textPersonName"
+        android:maxLines="1"
         app:layout_constraintBottom_toTopOf="@id/latLongTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,7 @@
         android:ems="10"
         android:hint="Coordinates"
         android:inputType="textPersonName"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/parentLabelName" />
