Finishing Transition to 'Friends' from House (#88)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/houseInputItems"
+        android:id="@+id/friendInputItems"
         android:layout_width="468dp"
         android:layout_height="722dp"
         tools:layout_editor_absoluteX="1dp"
