--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/nameTextView"
+            android:id="@+id/nameTagTextView"
             android:layout_width="0dp"
             android:layout_height="64dp"
             android:gravity="center"
@@ -26,7 +26,7 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@id/uidTextView"
+            app:layout_constraintBottom_toTopOf="@id/uidTagTextView"
             app:layout_constraintEnd_toStartOf="@+id/nameEditText"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,15 +44,15 @@
             android:inputType="text"
             android:textColor="@color/black"
             android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@id/uidDisplayTextView"
+            app:layout_constraintBottom_toTopOf="@id/uidTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/nameTextView"
+            app:layout_constraintStart_toEndOf="@+id/nameTagTextView"
             app:layout_constraintTop_toTopOf="parent"
             />
 
         <TextView
-            android:id="@+id/uidTextView"
+            android:id="@+id/uidTagTextView"
             android:layout_width="0dp"
             android:layout_height="64dp"
             android:gravity="center"
@@ -60,14 +60,14 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/uidDisplayTextView"
+            app:layout_constraintEnd_toStartOf="@+id/uidTextView"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nameTextView"
+            app:layout_constraintTop_toBottomOf="@+id/nameTagTextView"
             />
 
         <TextView
-            android:id="@+id/uidDisplayTextView"
+            android:id="@+id/uidTextView"
             android:layout_width="0dp"
             android:layout_height="64dp"
             android:gravity="center"
@@ -77,7 +77,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/uidTextView"
+            app:layout_constraintStart_toEndOf="@+id/uidTagTextView"
             app:layout_constraintTop_toBottomOf="@+id/nameEditText"
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -89,6 +89,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
+        android:onClick="onOkButtonClicked"
         android:text="@string/button_text_ok"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
