--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -28,9 +28,10 @@
         android:layout_marginEnd="16dp"
         android:clickable="true"
         android:contentDescription="@string/add_friend_floating_button_description"
+        android:onClick="onAddFriendFloatingActionButtonClicked"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_input_add"/>
+        app:srcCompat="@android:drawable/ic_input_add" />
 
     <Button
         android:id="@+id/backButton"
