--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -45,4 +45,31 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/backButton"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <Button
+            android:id="@+id/zoomInButton"
+            style="@android:style/ButtonBar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
+            android:text="@string/button_text_zoom_in" />
+
+        <Button
+            android:id="@+id/zoomOutButton"
+            style="@android:style/ButtonBar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_weight="1"
+            android:text="@string/button_text_zoom_out" />
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
