--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -45,4 +45,32 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <ImageView
+        android:id="@+id/gpsIndicator"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginBottom="124dp"
+        app:layout_constraintBottom_toTopOf="@+id/compassConstraintLayout"
+        app:layout_constraintEnd_toStartOf="@+id/addFriendFloatingActionButton"
+        app:layout_constraintHorizontal_bias="0.05"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.592"
+        app:srcCompat="@android:drawable/presence_invisible" />
+
+    <TextView
+        android:id="@+id/lastSignalTimeTextView"
+        android:layout_width="75dp"
+        android:layout_height="25dp"
+        android:layout_marginEnd="200dp"
+        android:layout_marginBottom="135dp"
+        android:text="@string/last_signal_time_default"
+        android:textSize="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/compassConstraintLayout"
+        app:layout_constraintEnd_toStartOf="@+id/addFriendFloatingActionButton"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/gpsIndicator"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
