--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -41,6 +41,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="@string/button_text_back"
+        android:onClick="onCompassBackButtonClicked"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -65,7 +66,7 @@
         android:layout_marginEnd="200dp"
         android:layout_marginBottom="135dp"
         android:text="@string/last_signal_time_default"
-        android:textSize="15dp"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/compassConstraintLayout"
         app:layout_constraintEnd_toStartOf="@+id/addFriendFloatingActionButton"
         app:layout_constraintHorizontal_bias="1.0"
