--- a/app/src/main/res/layout/activity_compass.xml
+++ b/app/src/main/res/layout/activity_compass.xml
@@ -48,30 +48,29 @@
 
     <ImageView
         android:id="@+id/gpsIndicator"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_marginBottom="124dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/compassConstraintLayout"
         app:layout_constraintEnd_toStartOf="@+id/addFriendFloatingActionButton"
         app:layout_constraintHorizontal_bias="0.05"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.592"
+        app:layout_constraintVertical_bias="0.105"
         app:srcCompat="@android:drawable/presence_invisible" />
 
     <TextView
         android:id="@+id/lastSignalTimeTextView"
-        android:layout_width="75dp"
-        android:layout_height="25dp"
-        android:layout_marginEnd="200dp"
-        android:layout_marginBottom="135dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/last_signal_time_default"
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/compassConstraintLayout"
         app:layout_constraintEnd_toStartOf="@+id/addFriendFloatingActionButton"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.025"
         app:layout_constraintStart_toEndOf="@+id/gpsIndicator"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.135" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
